--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@react-native-async-storage/async-storage": "^1.23.1",
+		"@react-navigation/stack": "^6.3.29",
 		"expo": "~51.0.9",
 		"expo-constants": "~16.0.2",
 		"expo-linking": "~6.3.1",
@@ -19,8 +20,9 @@
 		"nativewind": "^2.0.11",
 		"react": "18.2.0",
 		"react-native": "0.74.1",
+		"react-native-gesture-handler": "^2.16.2",
 		"react-native-safe-area-context": "4.10.1",
-		"react-native-screens": "3.31.1"
+		"react-native-screens": "^3.31.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
