--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-	"name": "lingify",
-	"version": "1.0.0",
-	"main": "expo-router/entry",
-	"scripts": {
-		"start": "expo start",
-		"android": "expo start --android",
-		"ios": "expo start --ios",
-		"web": "expo start --web"
-	},
-	"dependencies": {
-		"@react-native-async-storage/async-storage": "^1.23.1",
-		"@react-navigation/stack": "^6.3.29",
-		"expo": "~51.0.9",
-		"expo-constants": "~16.0.2",
-		"expo-linking": "~6.3.1",
-		"expo-router": "~3.5.14",
-		"expo-status-bar": "~1.12.1",
-		"firebase": "^10.12.2",
-		"nativewind": "^2.0.11",
-		"react": "18.2.0",
-		"react-native": "0.74.1",
-		"react-native-draggable-flatlist": "^4.0.1",
-		"react-native-gesture-handler": "^2.16.2",
-		"react-native-safe-area-context": "4.10.1",
-		"react-native-screens": "^3.31.1"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.20.0",
-		"tailwindcss": "^3.3.2"
-	},
-	"private": true
+  "name": "lingify",
+  "version": "1.0.0",
+  "main": "expo-router/entry",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/stack": "^6.3.29",
+    "expo": "~51.0.9",
+    "expo-constants": "~16.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.14",
+    "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.2",
+    "nativewind": "^2.0.11",
+    "react": "18.2.0",
+    "react-native": "0.74.1",
+    "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "^3.31.1",
+    "expo-image-picker": "~15.0.7"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
+  },
+  "private": true
 }
