--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/stack": "^6.3.29",
+    "@types/react": "~18.2.79",
     "expo": "~51.0.9",
     "expo-constants": "~16.0.2",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
+    "expo-router": "^3.5.18",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.2",
     "nativewind": "^2.0.11",
@@ -24,7 +26,7 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "^3.31.1",
-    "expo-image-picker": "~15.0.7"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
