--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.79",
     "expo": "~51.0.9",
+    "expo-av": "^14.0.6",
     "expo-constants": "~16.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
@@ -24,8 +25,10 @@
     "react-native": "0.74.1",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-orientation-locker": "^1.7.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.1.0",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
